--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <!-- First Image -->
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" 
+      alt="A majestic lion" 
+      title="Come and see the lion!"
+    />
+
+    <!-- Second Image -->
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/tiger.jpg" 
+      alt="A fierce tiger"
+    />
+
+    <!-- Third Image -->
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/elephant.jpg" 
+      alt="A large elephant" 
+      title="Experience the giant!"
+    />
   </body>
 </html>
